--- a/Activitat1_reapas.html
+++ b/Activitat1_reapas.html
@@ -6,12 +6,11 @@
         <script>           
             //aqui el nostre codi
             //declarar variables necesaries amb let i buscar al DOM el parragraf que modificarem
-           
+            let parragraf = document.getElementById("parragraf");
             function modifyP()
             {
-
+                parragraf.textContent = "adeu";   
             }
-
 
         </script>
     </body>
