--- a/Activitat3_reapas.html
+++ b/Activitat3_reapas.html
@@ -9,7 +9,15 @@
         <script>
             // Aquí el nostre codi
             //sobre un string podem fer servir toUpperCase() per posarlo en mayuscules.
-           
+           let entrada = document.getElementById ("Input");
+           let sortida =document.getElementById("resultat");
+
+           function converteix(){
+            sortida.textContent = input.value.toUpperCase();
+           }
+
+
+
         </script>
     </body>
 </html>
